Make use of defaults and environment variables